--- a/Shapes_Convolutional_Neural_Network-final-with-stars.ipynb
+++ b/Shapes_Convolutional_Neural_Network-final-with-stars.ipynb
@@ -858,13 +858,7 @@
       "126/126 [==============================] - 60s 475ms/step - loss: 0.0937 - accuracy: 0.9650 - mse: 0.0120 - val_loss: 0.0279 - val_accuracy: 0.9916 - val_mse: 0.0035\n",
       "Epoch 46/50\n",
       "126/126 [==============================] - 60s 473ms/step - loss: 0.0699 - accuracy: 0.9769 - mse: 0.0092 - val_loss: 0.0249 - val_accuracy: 0.9927 - val_mse: 0.0031\n",
-      "Epoch 47/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/50\n",
       "126/126 [==============================] - 60s 476ms/step - loss: 0.0753 - accuracy: 0.9717 - mse: 0.0102 - val_loss: 0.0299 - val_accuracy: 0.9903 - val_mse: 0.0039\n",
       "Epoch 48/50\n",
       "126/126 [==============================] - 62s 493ms/step - loss: 0.0828 - accuracy: 0.9732 - mse: 0.0101 - val_loss: 0.0316 - val_accuracy: 0.9898 - val_mse: 0.0041\n",
@@ -2618,7 +2612,8 @@
     "ExecuteTime": {
      "end_time": "2020-01-22T21:26:53.835367Z",
      "start_time": "2020-01-22T21:26:52.480344Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2651,7 +2646,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "testing_image('images_to_predict/IMG_5268.jpg')"
+   ]
   }
  ],
  "metadata": {
